# inf628-projectfinal

./: .gitignore  README.md
project/: email_levi.odt
src/: README.md
src/GAOPT/: ga.cpp  ga.h  individual.cpp  individual.h  main.cpp  run.sh
src/GNNOPT/: main.py  out.csv  requirements.txt  run.sh
src/benchmarks/: a.out  fib.cpp  floatmm.cpp  mm.cpp  queens.cpp  quicksort.cpp  quicksort2.cpp  teste  teste.cpp  treesort.cpp
src/ga/: CMakeLists.txt  ga.cpp  ga.h  individual.cpp  individual.h  main.cpp  opt_list-llvm8.0.txt  run_teste.sh
src/ga/benchmarks/: help-opt.txt  teste.cpp
src/ga/bytecode/: teste.ll
tests/: .~lock.results_time.csv#  O3-flags.txt  events.txt  exec.py  fib.cpp  perf_list.txt  results_time.csv  teste.s64
tests/Utils/: Utils.py
tests/fib/: clang_O0_fib.out  clang_O1_fib.out  clang_Os_fib.out  gcc_O0_fib.out  gcc_O1_fib.out  gcc_O3_fib.out  gcc_Os_fib.out
tests/floatmm/: clang_O0_floatmm.out  clang_O1_floatmm.out  clang_O2_floatmm.out  clang_O3_floatmm.out  clang_Os_floatmm.out  gcc_O0_floatmm.out  gcc_O1_floatmm.out  gcc_O2_floatmm.out  gcc_O3_floatmm.out  gcc_Os_floatmm.out
tests/queens/: clang_O0_queens.out  clang_O1_queens.out  clang_O2_queens.out  clang_O3_queens.out  clang_Os_queens.out  gcc_O0_queens.out  gcc_O1_queens.out  gcc_O2_queens.out  gcc_O3_queens.out  gcc_Os_queens.out
tests/quicksort/: clang_O0_quicksort.out  clang_O1_quicksort.out  clang_O2_quicksort.out  clang_Os_quicksort.out  gcc_O0_quicksort.out  gcc_O1_quicksort.out  gcc_O2_quicksort.out  gcc_O3_quicksort.out  gcc_Os_quicksort.out
(+52 files in other folders)
